A fix and a test case for Bug#26104 Bug on foreign key class constructor.

Fix the typo in the constructor. Cover a semantic check that previously
never worked with a test.